# rk_ai_media

./: .gitignore  CMakeLists.txt  README.md  build-linux_RK3588.sh
include/: postprocess.h  preprocess.h  rknn_pool.h  v4l2.h  yolov5.h
include/bytetrack/: BYTETracker.h  Rect.h  STrack.h  dataType.h  scalar.h
include/utils/: common.h  image_utils.h
src/: main.cc  mpp.c  postprocess.cc  preprocess.cc  rknn_pool.cpp  v4l2.c  yolov5.cc
src/bytetrack/: BYTETracker.cpp  STrack.cpp  kalmanFilter.cpp  scalar.cc  utils.cpp
src/utils/: image_utils.c
